--- a/Test.ipynb
+++ b/Test.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP9u8zb6OlMrK0ByUSLpsW5",
+      "authorship_tag": "ABX9TyMOdRDC6u6vRXV2iE1YrhJs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -324,11 +324,11 @@
         "\n",
         "  image = tf.cast(image, tf.float32)\n",
         "  image = (image - 127.5) / 127.5 # -1...1\n",
-        "  \n",
-        "  label = tf.cast(label, tf.float32) # (1)\n",
-        "  # noise = tf.random.normal((_INPUT, )) # (196)\n",
-        "  noise = tf.random.uniform((_INPUT, ), minval=-1, maxval=1) # (196)\n",
+        "\n",
         "  label = tf.expand_dims(label, -1)\n",
+        "  label = tf.cast(label, tf.float32) # (1)\n",
+        "  \n",
+        "  noise = tf.random.normal((_INPUT, )) # (196)\n",
         "\n",
         "  return image, label, noise"
       ],
@@ -343,7 +343,7 @@
         "colab": {}
       },
       "source": [
-        "def preprocess(dataset, shuffle=True, batch=True, prefetch=True):\n",
+        "def preprocess(dataset, shuffle=True, batch=True, prefetch=False):\n",
         "  \"\"\"Preprocess dataset\n",
         "\n",
         "  Preprocess: \n",
@@ -363,6 +363,7 @@
         "  if shuffle: dataset = dataset.shuffle(tf.data.experimental.cardinality(dataset))\n",
         "  if batch: dataset = dataset.batch(_BS, drop_remainder=True)\n",
         "  if prefetch: dataset = dataset.prefetch(1)\n",
+        "  \n",
         "  return dataset"
       ],
       "execution_count": 8,
